# algorithm-trading

./: .gitignore  CMakeLists.txt
TwsApiCpp/: CMakeLists.txt
TwsApiCpp/Shared/: EClientSocketBaseImpl.h  IBString.h
TwsApiCpp/src/: EPosixClientSocket.h
client/: EClient.cpp
src/: main.cpp
src/Algorithms/: HFTAlgorithm.cpp  HFTAlgorithm.h  KalmanFilterAlgorithm.cpp  KalmanFilterAlgorithm.h  MonteCarloAlgorithm.cpp  MonteCarloAlgorithm.h  RSIAlgorithm.cpp  RSIAlgorithm.h  SimpleMovingAverageCrossover.cpp  SimpleMovingAverageCrossover.h
src/Data/: HistoricalData.cpp  HistoricalData.h  LiveData.cpp  LiveData.h  MyClient.cpp  MyClient.h  TickData.h
src/Helper/: AtomicDouble.h  Helpers.cpp  Helpers.h
src/Trades/: Order.cpp  Order.h  SimulatedExecution.cpp  SimulatedExecution.h
